:sparkles: Get factory by ID
